Ensure app-container is not overlapped by site-bg before and after elements

--- a/app/javascript/stylesheets/global.css
+++ b/app/javascript/stylesheets/global.css
@@ -95,6 +95,8 @@ body {
   margin-right: auto;
   width: fit-content;
   padding-top: 5vh;
+  position: relative;
+  z-index: 10;
 }
 
 .pre-main-container {
